# mansico_meta_integration

./: README.md  license.txt  pyproject.toml
.github/workflows/: ci.yml
mansico_meta_integration/: hooks.py  modules.txt  overrides.py
mansico_meta_integration/mansico_meta_integration/custom/: lead.json  note.json
mansico_meta_integration/mansico_meta_integration/doctype/meta_facebook_settings/: meta_facebook_settings.js  meta_facebook_settings.json  meta_facebook_settings.py  test_meta_facebook_settings.py
mansico_meta_integration/mansico_meta_integration/doctype/meta_forms/: meta_forms.json  meta_forms.py
mansico_meta_integration/mansico_meta_integration/doctype/page_id/: page_id.js  page_id.json  page_id.py  test_page_id.py
mansico_meta_integration/mansico_meta_integration/doctype/read_by/: read_by.js  read_by.json  read_by.py  test_read_by.py
mansico_meta_integration/mansico_meta_integration/doctype/sync_new_add/: meta_integraion_objects.py  sync_new_add.js  sync_new_add.json  sync_new_add.py  test_sync_new_add.py
mansico_meta_integration/mansico_meta_integration/workspace/meta_leads/: meta_leads.json
